# OnvifClient_gSOAP

./: CMakeLists.txt
api/: CMakeLists.txt  deviceInformation.cpp  deviceInformation.h
samples/common/: common.h
test/: CMakeLists.txt  demo.cpp
